--- a/frontendStorage/index.html
+++ b/frontendStorage/index.html
@@ -4,6 +4,7 @@
 <!-- index.html – Minimal vanilla‑JS client for the Prisoner’s‑Dilemma API
 // ----------------------------------------------------------------------------
 // V1.0 - 06-14-2025
+  // NOTE : THE FRONT END IS NOT HOSTED IN THIS PROJECT. ** this is kept here just for storage and reference **
 //  🗂  Fi-le layout (single page, no bundler)-:
 //    • Five <section> blocks act as pseudo‑pages (join ▸ wait ▸ play ▸ wait ▸ results)
 //    • Front‑end state is DRIVEN ENTIRELY BY the back‑end phase/state machine.
